--- a/src/partials/button/_button.scss
+++ b/src/partials/button/_button.scss
@@ -1,6 +1,6 @@
 .button {
   background-color: $color-accent;
-  border-radius: 4px;
+  border-radius: $border-radius;
   border: none;
   box-sizing: border-box;
   color: #ffffff;
@@ -23,7 +23,7 @@
   background-color: $color-accent-light;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto $color-accent-light;
+.button:focus,
+.button:focus-visible {
+  outline: $border-radius auto $color-accent-light;
 }
