--- a/src/partials/button/button.hbs
+++ b/src/partials/button/button.hbs
@@ -1,1 +1,1 @@
-<button class="button">{{label}}</button>
+<button class="button" {{#if id}} id={{id}} {{/if}} {{#if type}} type={{type}} {{/if}}>{{label}}</button>
