feat: chats page

--- a/src/partials/input/input.hbs
+++ b/src/partials/input/input.hbs
@@ -1,1 +1,1 @@
-<input class="input" {{#if id}} id={{id}} {{/if}} placeholder={{placeholder}} name={{name}} {{#if value}} value={{value}} {{/if}}/>
+<input class="input" {{#if id}} id={{id}} {{/if}} placeholder='{{placeholder}}' name={{name}} {{#if value}} value={{value}} {{/if}}/>
