--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,32 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(241, 241, 241);
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $color-accent;
+  border-radius: 20px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: $color-accent-light;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 a {
   color: #646cff;
   text-decoration: inherit;
@@ -24,19 +50,25 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+p {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+}
+
+body {
+  overflow: hidden;
+  margin: 0;
 }
 
 #app {
   max-width: 1280px;
+  min-width: 680px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  box-sizing: border-box;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
 .form {
