--- a/src/partials/button/button.hbs
+++ b/src/partials/button/button.hbs
@@ -1,1 +1,1 @@
-<button class="button" {{#if id}} id={{id}} {{/if}} {{#if type}} type={{type}} {{/if}}>{{label}}</button>
+<button  {{#if outline}}class="button outline"{{else}}class="button"{{/if}} {{#if id}} id={{id}} {{/if}} {{#if type}} type={{type}} {{/if}}>{{label}}</button>
