ref: chats styles

--- a/src/pages/chats/chats.hbs
+++ b/src/pages/chats/chats.hbs
@@ -1,8 +1,8 @@
-<div class="chat-left-container ">
+<div class={{styles.left}}>
   {{> profilePanel profilePanel}}
   {{> chatList chatList}} 
 </div>
-<div class="chat-right-container ">
+<div class={{styles.right}}>
   {{> chat currentChat}} 
   {{> sendPanel sendPanel}} 
 </div>
