--- a/src/pages/chats/styles.module.scss
+++ b/src/pages/chats/styles.module.scss
@@ -1,15 +1,15 @@
-.chats {
+.wrapper {
   display: flex;
   overflow: hidden;
 }
 
-.chat-right-container {
+.right {
   width: 70%;
   display: flex;
   flex-direction: column;
 }
 
-.chat-left-container {
+.left {
   width: 30%;
   display: flex;
   flex-direction: column;
