--- a/src/partials/styles.scss
+++ b/src/partials/styles.scss
@@ -1,5 +1,6 @@
 @import "./avatar/avatar";
 @import "./button/button";
 @import "./input/input";
+@import "./form-item/formItem";
 @import "./typography/h1/h1";
 @import "./typography/text/text";
