--- a/src/pages/sign-up/signUp.hbs
+++ b/src/pages/sign-up/signUp.hbs
@@ -1,11 +1,11 @@
 <form id="signup-form" class="form">
     {{> h1 title }}
-    {{> input emailField }}
-    {{> input loginField }}
-    {{> input nameField }}
-    {{> input surnameField }}
-    {{> input passwordField }}
-    {{> input passwordRepeatField }}
+    {{> formItem name=email.name input=emaild}}
+    {{> input login }}
+    {{> input first_name }}
+    {{> input second_name }}
+    {{> input password }}
+    {{> input passwordRepeat }}
     {{> button button }}
     {{> link loginLink}}
 </form>
