feat: MVC model

--- a/src/pages/chats/chat/chat.hbs
+++ b/src/pages/chats/chat/chat.hbs
@@ -1,5 +1,9 @@
 <div class="chat">
+{{#if isLoading}}
+  {{> loader}}
+{{else}}
   {{#each messages}}
   {{> bubble text=this.message my=this.my}}
   {{/each}}
+{{/if}}
 </div>
