--- a/src/pages/chats/chatList/styles.scss
+++ b/src/pages/chats/chatList/styles.scss
@@ -1,6 +1,9 @@
 @import "../../../styles/constants/constants.scss";
 
 .chat-list {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   overflow-y: auto;
   .chat-card {
     display: flex;
