--- a/src/pages/chats/styles.module.scss
+++ b/src/pages/chats/styles.module.scss
@@ -1,6 +1,9 @@
+@import "../../styles/constants/constants.scss";
+
 .wrapper {
   display: flex;
   overflow: hidden;
+  height: 100%;
 }
 
 .right {
@@ -13,4 +16,5 @@
   width: 30%;
   display: flex;
   flex-direction: column;
+  box-shadow: 1px 1px 3px $color-shadow;
 }
