--- a/src/styles/constants/colors/_colors.scss
+++ b/src/styles/constants/colors/_colors.scss
@@ -3,3 +3,4 @@ $color-accent-light: #f082ac;
 $color-accent-bg: #ffdce9;
 $color-error: #e72929;
 $color-error-light: #e74e4e;
+$color-shadow: #80808070;
