--- a/src/pages/chats/sendPanel/sendPanel.hbs
+++ b/src/pages/chats/sendPanel/sendPanel.hbs
@@ -1,1 +1,1 @@
-<div class="send-panel">{{> input input}}{{> button button}}</div>
+<form class="send-panel" id="send-message-form">{{> input input}}{{> button button}}</form>
