--- a/src/pages/sign-up/signUp.hbs
+++ b/src/pages/sign-up/signUp.hbs
@@ -1,6 +1,6 @@
 <form id="signup-form" class="form">
     {{> h1 title }}
-    {{> formItem name=email.name input=emaild}}
+    {{> formItem name=email.name input=email}}
     {{> input login }}
     {{> input first_name }}
     {{> input second_name }}
