--- a/src/pages/sign-up/signUp.hbs
+++ b/src/pages/sign-up/signUp.hbs
@@ -1,11 +1,12 @@
 <form id="signup-form" class="form">
     {{> h1 title }}
     {{> formItem name=email.name input=email}}
-    {{> input login }}
-    {{> input first_name }}
-    {{> input second_name }}
-    {{> input password }}
-    {{> input passwordRepeat }}
+    {{> formItem name=login.name input=login}}
+    {{> formItem name=first_name.name input=first_name}}
+    {{> formItem name=second_name.name input=second_name}}
+    {{> formItem name=phone.name input=phone}}
+    {{> formItem name=password.name input=password}}
+    {{> formItem name=passwordRepeat.name input=passwordRepeat}}
     {{> button button }}
     {{> link loginLink}}
 </form>
