--- a/src/partials/form-item/formItem.hbs
+++ b/src/partials/form-item/formItem.hbs
@@ -3,4 +3,8 @@
         {{> input input }}
         <div error-for={{name}} class="error-text"></div>
     {{/if}}
+    {{#if textarea}}
+        {{> textarea textarea }}
+        <div error-for={{name}} class="error-text"></div>
+    {{/if}}
 </div>
