--- a/src/partials/styles.scss
+++ b/src/partials/styles.scss
@@ -1,6 +1,7 @@
 @import "./avatar/avatar";
 @import "./button/button";
 @import "./input/input";
+@import "./text-area/textArea";
 @import "./loader/loader";
 @import "./form-item/formItem";
 @import "./typography/h1/h1";
