--- a/src/pages/chats/chat/chat.hbs
+++ b/src/pages/chats/chat/chat.hbs
@@ -1,9 +1,12 @@
-<div class="chat">
 {{#if isLoading}}
   {{> loader}}
 {{else}}
   {{#each messages}}
   {{> bubble text=this.message my=this.my}}
   {{/each}}
+  {{#if isPosting}}
+  <div class={{styles.loader}}>
+    {{> loader}}
+  </div>
+  {{/if}}
 {{/if}}
-</div>
