--- a/src/pages/chats/chatList/styles.module.scss
+++ b/src/pages/chats/chatList/styles.module.scss
@@ -1,5 +1,8 @@
 @import "../../../styles/constants/constants.scss";
 
+.wrapper {
+  width: 100%;
+}
 .chat-list {
   height: 100%;
   display: flex;
