--- a/src/pages/chats/sendPanel/sendPanel.hbs
+++ b/src/pages/chats/sendPanel/sendPanel.hbs
@@ -1,1 +1,1 @@
-<form class="send-panel" id="send-message-form">{{> formItem name=textarea.name textarea=textarea}}{{> button button}}</form>
+<form class={{styles.send-panel}} id="send-message-form">{{> formItem name=textarea.name textarea=textarea}}{{> button button}}</form>
