--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,7 +1,10 @@
-<form id="login-form" class="form">
-    {{> h1 title }}
-    {{> input nameField }}
-    {{> input passwordField }}
-    {{> button button }}
-    {{> link signUpLink}}
-</form>
+<div class={{styles.wrapper}}>
+   <form id="login-form" class="form">
+        {{> h1 title }}
+        {{> input nameField }}
+        {{> input passwordField }}
+        {{> button button }}
+        {{> link signUpLink}}
+    </form> 
+</div>
+
