--- a/src/pages/profile/change-password/changePassword.hbs
+++ b/src/pages/profile/change-password/changePassword.hbs
@@ -1,7 +1,10 @@
-<form id="login-form" class="form">
-    {{> h1 title }}
-    {{> input passwordField }}
-    {{> input passwordRepeatField }}
-    {{> button button }}
-    {{> link backLink}}
-</form>
+<div class={{styles.wrapper}}>
+   <form id="login-form" class="form">
+        {{> h1 title }}
+        {{> input passwordField }}
+        {{> input passwordRepeatField }}
+        {{> button button }}
+        {{> link backLink}}
+    </form> 
+</div>
+
