--- a/src/partials/form-item/formItem.hbs
+++ b/src/partials/form-item/formItem.hbs
@@ -1,4 +1,4 @@
-<div item-for={{name}}>
+<div item-for={{name}} class={{className}}>
     {{#if input}}
         {{> input input }}
         <div error-for={{name}} class="error-text"></div>
