--- a/src/pages/profile/profile-edit/profileEdit.hbs
+++ b/src/pages/profile/profile-edit/profileEdit.hbs
@@ -3,12 +3,12 @@
         <label for="avatar_input">{{> avatar avatar}}  </label>
         <input type="file" id="avatar_input" name="avatar" accept="image/png, image/jpeg" >
     </div>
-    {{> input displayField value=displayName }}    
-    {{> input loginField value=login }}    
-    {{> input nameField value=name }}
-    {{> input surnameField value=surname }}
-    {{> input phoneField value=phone }}
-    {{> input emailField value=email }}  
+    {{> formItem className=styles.form-item name=displayField.name input=displayField }}    
+    {{> formItem className=styles.form-item name=loginField.name input=loginField }}    
+    {{> formItem className=styles.form-item name=nameField.name input=nameField }}
+    {{> formItem className=styles.form-item name=surnameField.name input=surnameField }}
+    {{> formItem className=styles.form-item name=phoneField.name input=phoneField }}
+    {{> formItem className=styles.form-item name=emailField.name input=emailField }}  
     {{> button submitButton }}
     {{> button cancelButton outline='true'}}
 </form>
