refactor: ts errors

--- a/src/pages/stubs/404/stub404.hbs
+++ b/src/pages/stubs/404/stub404.hbs
@@ -1,4 +1,4 @@
 <div class={{styles.container}}>
-    <img class={{styles.image}} src="/img/barbredy.jpg" />
+    <img class={{styles.image}} src="/img/barbredy.jpg" alt="Inspector Barbredy"/>
     {{> h1 title}}
 </div>
