--- a/src/partials/avatar/avatar.hbs
+++ b/src/partials/avatar/avatar.hbs
@@ -1,1 +1,1 @@
-<img class="avatar" {{#if id}} id={{id}} {{/if}} {{#if src}} src={{src}} {{else}} src='/icons/user.svg' {{/if}} />
+<img class="avatar" alt="avatar" {{#if id}} id={{id}} {{/if}} {{#if src}} src={{src}} {{else}} src='/icons/user.svg' {{/if}} />
